# XSpammer2

./: .gitignore  README.md  electron-builder.yml  index.html  main.js  package.json  rollup.config.js  tsconfig.json  vite.config.ts
main/: background.js
main/helpers/: create-window.js
public/: index.html
renderer/: next.config.js
renderer/assets/styles/: default.css
renderer/components/: alert.jsx  alert.module.css  button.jsx  button.module.css  input.jsx  input.module.css  layout.jsx  layout.module.css  modal.jsx  modal.module.css  sidebar.jsx  sidebar.module.css
renderer/content/: bot.jsx  bot.module.css  bots.jsx  bots.module.css  home.jsx  instance.jsx  instance.module.css  instances.jsx  instances.module.css
renderer/lib/: context.js  discord.js  store.js  timeout.js
renderer/lib/alert/: alert.js  defaultAlertValues.js
renderer/lib/discord/: createClient.js  validateToken.js
renderer/pages/: _app.jsx  _document.jsx  home.jsx
resources/: icon.icns
src/: App.svelte  main.js  main.svelte  main.ts  stores.js  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: button.css  button.svelte  input.css  input.svelte  layout.css  layout.svelte  modal.css  modal.svelte  sidebar.css  sidebar.svelte
src/content/: bots.css  bots.svelte  home.svelte  instances.svelte
src/lib/: Greet.svelte
src/pages/: main.svelte
src/styles/: default.css
